# audio-effect

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Src/: AudioEffect.cpp
Src/Common/: AudioFormat.h  CMakeLists.txt  Ringbuf.cpp  Util.h
Src/Effect/: CMakeLists.txt  Effect.h  EffectApi.cpp  EffectApi.h  EffectBuffer.h  EffectPlugin.h  EffectThread.cpp
Src/Effect/Plugins/: SoxEffect.cpp  SoxEffect.h
Src/Input/: CMakeLists.txt  InputPlugin.h  InputThread.cpp
Src/Input/Plugins/: AlsaInput.cpp  AlsaInput.h
Src/Output/: CMakeLists.txt  OutputPlugin.h  OutputThread.cpp
Src/Output/Plugins/: AlsaOutput.cpp  AlsaOutput.h
